feat<security>: đọc CORS allowed origins từ env var thay vì hardcode